--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,7 @@
             "email": "arnaud@matierenoire.io"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "^7.2"
+    }
 }
